# VAL-Attack

./: .gitignore  README.md  main_numpy.py  pyproject.toml
file_extraction/: extract_wiki_files.py  mk_block_lits.sh
