[project]
name = "val-attack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib~=3.5.1",
    "nltk~=3.6.7",
    "numpy~=1.22.2",
    "pandas~=1.4.0",
    "tqdm~=4.62.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
